<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/home"
        />

    <item
        android:id="@+id/nav_search"
        android:title="@string/nav_search"
        android:icon="@drawable/search"
        />

    <item
        android:id="@+id/nav_discuss"
        android:title="@string/nav_discuss"
        android:icon="@drawable/discuss"
        />

    <item
        android:id="@+id/nav_favorites"
        android:title="@string/nav_favorites"
        android:icon="@drawable/favorite"
        />

    <item
        android:id="@+id/nav_watchlist"
        android:title="@string/nav_watch_list"
        android:icon="@drawable/watchlist"
        />
</menu>