<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/cardView"
android:layout_width="match_parent"
android:layout_height="205dp"
android:layout_marginBottom="5dp"
android:layout_marginLeft="5dp"
android:layout_marginRight="5dp"
android:layout_marginTop="5dp"
app:cardCornerRadius="5dp"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryDark">


    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:id="@+id/movie_picture_item_discuss"
        android:layout_width="130dp"
        android:layout_height="182dp"
        android:src="@drawable/poster1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_name_discuss_item"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="5dp"
                    android:maxLines="2"
                    android:text="@string/movie_name"
                    android:textColor="@color/colorGrey1"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_year_discussion_item"
                    android:maxLines="1"
                    android:textSize="12sp"
                    android:text="@string/release_year"
                    android:textColor="@color/colorGrey1"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="1dp"
                    android:textStyle="italic"
                    />

            </LinearLayout>



        </LinearLayout>


        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="9dp"
            android:id="@+id/movie_description_discussion_item"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/detail_movie_descr"
            style="@style/textInputHintStyle"
            android:textSize="12sp"
            android:maxLines="7"
            android:textColor="@color/colorGrey1"
            android:lineSpacingExtra="3dp"/>


    </LinearLayout>




</LinearLayout>



</android.support.v7.widget.CardView>